--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@
 name: Build and deploy a container to an Azure Web App
 
 env:
-  AZURE_WEBAPP_NAME: docker-devops-testApp   # set this to your application's name
+  AZURE_WEBAPP_NAME: docker-decops-testApp   # set this to your application's name
 
 on:
   push:
