--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test --no-watch --source-map=false --browsers=ChromeHeadless",
+    "test": "ng test",
     "lint": "ng lint"
   },
   "private": true,
