--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,7 @@ jobs:
         run: |
           npm install
           npm run build
+          npm test --watch=false --browsers=ChromeHeadless
       - uses: actions/upload-artifact@master
         with:
           name: webpack artifacts
